--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <p id="dv">Dev em ascenção</p>
                     </span>
                     <span>
-                        <p>construindo e desenvolvendo soluções para seus problemas</p>
+                        <p>Construindo e desenvolvendo soluções para seus problemas</p>
                     </span>
                     <a id="whatssap" target="_blank" href="https://api.whatsapp.com/send/?phone=5571983570869&text=Ol%C3%A1%2C+tudo+bem%3F+Estou+entrando+em+contato+para+falar+sobre+uma+oportunidade+para+desenvolvedor%21&type=phone_number&app_absent=0">
           Fale Comigo  <i class="ri-whatsapp-fill"></i>
@@ -65,7 +65,7 @@
                         Sou movido pela curiosidade, guiado pela lógica e inspirado pela possibilidade de construir algo
                         que vá
                         além da
-                        tela — aplicações que gerem valor e histórias que inspirem. Estou trilhando essa jornada com
+                        tela aplicações que gerem valor e histórias que inspirem. Estou trilhando essa jornada com
                         dedicação,
                         aprendendo todos os dias e lapidando uma nova versão de mim mesmo: mais ousada, conectada e
                         determinada.</p>
@@ -186,7 +186,7 @@
         </div>
     </main>
     <footer>
-        <p>desenvolvido por Breno Cirqueira</p>
+        <p> &copy; Desenvolvido por Breno Cirqueira</p>
     </footer>
 </body>
 
