--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         <p>Raciocinio</p>
                     </div>
                 </div>
-                <a target="_blank" id="curriculo" href="assets/document/Breno Cirqueira Esteves Pinto curriculo 6.0 (1).pdf">Ver currículo</a>
+                <a target="_blank" id="curriculo" href="assets/document/BrenoCirqueiraDevCurriculo.pdf">Ver currículo</a>
             </section>
             <section id="projetos">
                 <h2 id="chamarirprojeto">Meus projetos</h2>
