--- a/index.html
+++ b/index.html
@@ -158,6 +158,15 @@
                             <a target="_blank" href="https://github.com/BrenoCirqueira/Pagina_Transportadora/blob/main/Atividade%20Transportadora/index.html">codigo</a>
                         </div>
                     </div>
+                    <div class="conteiner-projeto">
+                        <img src="assets/imagens/calculadoraDeIdade.png"
+                            alt="ProjetoCalculadoraDeIdade">
+                        <p>Calculadora De idade Daxcode</p>
+                        <div>
+                            <a target="_blank" href="https://brenocirqueira.github.io/Calculadora_De_Idade/">Ver</a>
+                            <a target="_blank" href="https://github.com/BrenoCirqueira/Calculadora_De_Idade">codigo</a>
+                        </div>
+                    </div>
                 </div>
             </section>
             <section id="contato">
