--- a/index.html
+++ b/index.html
@@ -167,6 +167,15 @@
                             <a target="_blank" href="https://github.com/BrenoCirqueira/Calculadora_De_Idade">codigo</a>
                         </div>
                     </div>
+                    <div class="conteiner-projeto">
+                        <img src="assets/imagens/verificadordeCep.png"
+                            alt="ProjetoCalculadoraDeIdade">
+                        <p>Verificador De Cep</p>
+                        <div>
+                            <a target="_blank" href="https://brenocirqueira.github.io/VerificadorDeCep//">Ver</a>
+                            <a target="_blank" href="https://github.com/BrenoCirqueira/VerificadorDeCep">codigo</a>
+                        </div>
+                    </div>
                 </div>
             </section>
             <section id="contato">
