--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
                             alt="PortalComunitarioImageBase">
                         <p>Portal Camaçari</p>
                         <div>
-                            <a target="_blank" href="https://github.com/BrenoCirqueira/PortalComunitarioCama-ari">Ver</a>
-                            <a target="_blank" href="https://github.com/BrenoCirqueira/PortalComunitarioCama-ari/blob/main/home.html">codigo</a>
+                            <!-- <a target="_blank" href="https://github.com/BrenoCirqueira/PortalComunitarioCama-ari">Ver</a> -->
+                            <a target="_blank" href="https://github.com/BrenoCirqueira/PortalComunitarioCama-ari/blob/main/home.html">Codigo</a>
                         </div>
                     </div>
                     <div class="conteiner-projeto">
@@ -145,8 +145,8 @@
                             alt="headerPrimeImage">
                         <p>Header Prime</p>
                         <div>
-                            <a target="_blank" href="https://github.com/BrenoCirqueira/HeaderPrime">Ver</a>
-                            <a target="_blank" href="https://github.com/BrenoCirqueira/HeaderPrime/blob/main/headerPrime.html">codigo</a>
+                            <!-- <a target="_blank" href="https://github.com/BrenoCirqueira/HeaderPrime">Ver</a> -->
+                            <a target="_blank" href="https://github.com/BrenoCirqueira/HeaderPrime/blob/main/headerPrime.html">Codigo</a>
                         </div>
                     </div>
                     <div class="conteiner-projeto">
@@ -154,8 +154,8 @@
                             alt="PaginaTransportadoraImagem">
                         <p>Page Transportadora</p>
                         <div>
-                            <a target="_blank" href="https://github.com/BrenoCirqueira/Pagina_Transportadora">Ver</a>
-                            <a target="_blank" href="https://github.com/BrenoCirqueira/Pagina_Transportadora/blob/main/Atividade%20Transportadora/index.html">codigo</a>
+                            <!-- <a target="_blank" href="https://github.com/BrenoCirqueira/Pagina_Transportadora">Ver</a> -->
+                            <a target="_blank" href="https://github.com/BrenoCirqueira/Pagina_Transportadora/blob/main/Atividade%20Transportadora/index.html">Codigo</a>
                         </div>
                     </div>
                     <div class="conteiner-projeto">
@@ -164,7 +164,7 @@
                         <p>Calculadora De idade Daxcode</p>
                         <div>
                             <a target="_blank" href="https://brenocirqueira.github.io/Calculadora_De_Idade/">Ver</a>
-                            <a target="_blank" href="https://github.com/BrenoCirqueira/Calculadora_De_Idade">codigo</a>
+                            <a target="_blank" href="https://github.com/BrenoCirqueira/Calculadora_De_Idade">Codigo</a>
                         </div>
                     </div>
                     <div class="conteiner-projeto">
@@ -176,6 +176,13 @@
                             <a target="_blank" href="https://github.com/BrenoCirqueira/VerificadorDeCep">codigo</a>
                         </div>
                     </div>
+                    <div class="conteiner-projeto">
+                        <img src="assets/imagens/ConversorDeMoedas.png"
+                            alt="Conversor de Moedas Com API">
+                        <p>Portal Camaçari</p>
+                        <div>
+                            <a target="_blank" href="https://github.com/BrenoCirqueira/Conversor-De-Moeda-BRL-to-USD">Codigo</a>
+                        </div>
                 </div>
             </section>
             <section id="contato">
