--- a/index.html
+++ b/index.html
@@ -179,10 +179,19 @@
                     <div class="conteiner-projeto">
                         <img src="assets/imagens/ConversorDeMoedas.png"
                             alt="Conversor de Moedas Com API">
-                        <p>Portal Camaçari</p>
+                        <p>Conversor de moeda BRL to USD with PHP</p>
                         <div>
                             <a target="_blank" href="https://github.com/BrenoCirqueira/Conversor-De-Moeda-BRL-to-USD">Codigo</a>
                         </div>
+                    </div>
+                    <div class="conteiner-projeto">
+                        <img src="assets/imagens/ADMuser.png"
+                            alt="ADM user">
+                        <p>Adiministrador de usuarios</p>
+                        <div>
+                            <a target="_blank" href="https://github.com/BrenoCirqueira/Crud-simples">Codigo</a>
+                        </div>
+                    </div>  
                 </div>
             </section>
             <section id="contato">
